commit for gc